backend : implemanted backend controller ,service and repository
