# bsol-backend/bsol-backend-impl/src/main/java/com/uv/app/entity/ListingEntity.java
@@ -1,0 +1,62 @@
+package com.uv.app.entity;
+
+import com.uv.app.enums.ListingStatus;
+import jakarta.persistence.*;
+import lombok.*;
+import org.hibernate.annotations.CreationTimestamp;
+import org.hibernate.annotations.UpdateTimestamp;
+import org.springframework.format.annotation.DateTimeFormat;
+
+import java.time.OffsetDateTime;
+import java.util.List;
+
+@Entity
+@Table(name = "listings")
+@Getter
+@Setter
+@Builder(toBuilder = true)
+@NoArgsConstructor
+@AllArgsConstructor
+@ToString
+public class ListingEntity {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+
+    @Column(name = "type")
+    private String type;
+
+    @Column(name = "sub_type")
+    private String subType;
+
+    @Column(name = "primary_id")
+    private String primaryId;
+
+    @Column(name = "city")
+    private String city;
+
+    @Column(name = "payload", columnDefinition = "TEXT")
+    private String payload;
+
+    private Double latitude;
+
+    private Double longitude;
+
+    @Column(name = "create_time")
+    @CreationTimestamp
+    @DateTimeFormat(iso = DateTimeFormat.ISO.DATE_TIME)
+    private OffsetDateTime createTime;
+
+    @Column(name = "update_time")
+    @UpdateTimestamp
+    @DateTimeFormat(iso = DateTimeFormat.ISO.DATE_TIME)
+    private OffsetDateTime updateTime;
+
+    @Enumerated(EnumType.STRING)
+    @Column(name = "status")
+    private ListingStatus status;
+
+    @OneToMany(mappedBy = "listing", cascade = CascadeType.ALL, fetch = FetchType.LAZY)
+    private List<ListingAttributesEntity> listingAttributes;
+}
